--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,12 @@
     align-items: center;
 }
 .colorPrivacy{
+    font-size: 22px;
     color: #5f6368;
 }
 h2{
     color: #3c4043;
+    padding-bottom: 30px;
 }
 p{
     color: #5f6368;
@@ -44,6 +46,7 @@ li{
 }
 hr{
     width: 100%;
+    color: #5f6368;
 }
 i{
     color: #5f6368;
@@ -59,5 +62,26 @@ i{
     align-items: center;
 }
 footer{
-    background-color: yellowgreen;
+    background-color: #f4f4f4;
+}
+.template{
+    padding: 50px 0;
+}
+a{
+    text-decoration: none;
+    color: inherit;
+}
+select{
+    width: 200px;
+}
+.containerFooter{
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.active{
+    padding: 17px 0;
+    border-bottom: 4px solid #3a6bd6;
 }
