--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+/*set generali*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
 }
+/*Header*/
 .header{
     width: 100%;
     padding: 10px;
@@ -10,31 +14,17 @@
     justify-content: space-between;
     align-items: center;
 }
-.container{
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px 0px;
-    height: 100vh;
-    overflow-y: scroll;
-}
 .logoSection{
     display: flex;
     align-items: center;
 }
-.colorPrivacy{
-    font-size: 22px;
-    color: #5f6368;
-}
-h2{
-    color: #3c4043;
-    padding-bottom: 30px;
-}
-p{
-    color: #5f6368;
-}
 .logo{
     width: 85px;
     height: 30px;
+}
+.colorPrivacy{
+    font-size: 22px;
+    color: #5f6368;
 }
 ul{
     display: flex;
@@ -43,14 +33,6 @@ ul{
 }
 li{
    padding: 10px 10px ;
-}
-hr{
-    width: 100%;
-    color: #5f6368;
-}
-i{
-    color: #5f6368;
-    margin-right: 10px;
 }
 .user{
     width: 30px;
@@ -61,11 +43,35 @@ i{
     display: flex;
     align-items: center;
 }
-footer{
-    background-color: #f4f4f4;
+hr{
+    width: 100%;
+    color: #5f6368;
+}
+/*Main*/
+.container{
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px 0px;
+    height: 100vh;
+    overflow: auto;
 }
 .template{
     padding: 50px 0;
+}
+h2{
+    color: #3c4043;
+    padding-bottom: 30px;
+}
+p{
+    color: #5f6368;
+}
+/*Footer*/
+footer{
+    background-color: #f4f4f4;
+}
+i{
+    color: #5f6368;
+    margin-right: 10px;
 }
 a{
     text-decoration: none;
@@ -82,6 +88,7 @@ select{
     align-items: center;
 }
 .active{
+    color: #3a6bd6;
     padding: 17px 0;
     border-bottom: 4px solid #3a6bd6;
 }
